2012-03-06  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c, providerMgr.c:
	[ 3497950 ] SFCB Semaphore Handling Improvements
	(patch by Viktor Mihajlovski)

	* providerDrv.c, providerMgr.c:
	[ 3497765 ] Better Error Handling in sfcb Provider Manager and Driver
	(patch by Viktor Mihajlovski)

2012-03-05  Narasimhma Sharoff  <nsharoff@us.ibm.com>

	* providerDrv.c, providerMgr.c, sfcBroker.c
	[ 3497096 ] double free during stopProc

2012-03-05  Narasimhma Sharoff  <nsharoff@us.ibm.com>

	* providerDrv.c, providerMgr.c, providerMgr.h, support.c
	[ 3416060 ] sigsegv in tool_mm_flush()

2012-03-02  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopProvider.c:
	[ 3496383 ] Faster Return from CBDeliverIndication

2012-03-01 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c, indRetryTest.sh
	[ 3484083] Exclude SFCBIndicationID 

2012-03-01  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopProvider.c:
	[ 3496061 ] IndicationSubscription May Be Undeletable

2012-03-01 Narasimha Sharoff <nsharoff@us.ibm.com>

	* brokerUpc.c
	[ 3483200 ] duplicate indication deliveries

2012-02-29  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerMgr.c:
	[ 3495806 ] isChild() can cause a provider mismatch
	(patch by Viktor Mihajlovski)

	* Makefile.am, test/Makefile.am, test/TestProviders/tests/IndRetryTest.sh,
	  test/TestProviders/tests/Makefile.am, test/TestProviders/tests/xmltest.sh,
	  test/commands/Makefile.am, test/commands/sfcbdump.sh,
	  test/unittest/Makefile.am, test/xmltest/Makefile.am, test/xmltest/xmltest.sh,
	  test/xmltest/modifyInstance_regprofile.lines:
	[ 3495789 ] Makefile improvements for test suite
	(patch by Viktor Mihajlovski)

2012-02-29 Narasimha Sharoff <nsharoff@us.ibm.com>

	* indCIMXMLHandler.c, interopProvider.c
	[ 3495060 ] verify filter and handler information during subscription

2012-02-29 Dave Heller <hellerda@us.ibm.com>

	* cimslpSLP.c:
	[ 3495801 ] Correction to 3495343
