@@ -89,12 +89,6 @@
    type: instance
    namespace: root/interop
 #
-[__Namespace]
-   provider: ServerProvider
-   location: sfcInteropServerProvider
-   type: instance
-   namespace: *
-#
 [CIM_ObjectManager]
    provider: ServerProvider
    location: sfcInteropServerProvider
