@@ -45,6 +45,7 @@ Bugs fixed:
 - 3497096 double free during stopProc
 - 3497765 Better Error Handling in sfcb Provider Manager and Driver
 - 3497950 SFCB Semaphore Handling Improvements
+- 3498275 Remove __Namespace
 
 Changes in 1.3.13
 =================
